fixed overflow-y

--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
 
 @media screen and (max-width: 900px) {
     body {
-        background-color: white
+        background-color: white;
+        overflow-y: scroll;
     }
 
     #card {
